trying to get core.test working...